--- a/formulario.html
+++ b/formulario.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Fotos</title>
+    <title>Página de Formulário</title>
 </head>
 <body>
-    <h1>Página de Fotos</h1>
+    <h1>Página de Formulários</h1>
     
 </body>
 </html>
