--- a/fotos.html
+++ b/fotos.html
@@ -7,7 +7,53 @@
     <title>Página de Fotos</title>
 </head>
 <body>
-    <h1>Página de Fotos</h1>
-    
+        <h1>Luan Santana</h1>
+        <h2>Links</h2>
+        <ul>
+            <li>Home</li>
+            <li>
+                <a href="fotos.html">
+                     Fotos    
+                </a>
+            </li>
+        </ul>
+        <img src="Luan santana.jpg"width="650"height="433"/>
+        <p>
+            Luan Santana é um cantor e compositor sertanejo brasileiro, nascido em 13 de março de 1991, em Campo Grande, Mato Grosso do Sul.
+    Desde criança, com um violão presenteado pelo pai, mostrou talento musical, o que o levou a apresentações locais. Em 2007, fez sua primeira
+    apresentação pública, e em 2008, com a música "Meteoro", sua carreira decolou nacionalmente, culminando em sucessos estrondosos, como o 
+    álbum "Tô de Cara". Reconhecido nas redes sociais e na TV, Luan acumulou uma extensa discografia, turnês internacionais e diversas parcerias
+    musicais. Sua carreira inclui também atuações como apresentador de TV e participações em novelas. 
+        </p>
+         <img src="L.S">
+         <p>
+            <h1>Luan Santana lançou os seguintes álbuns de estúdio/ao vivo:</h1>
+            <li>Ao Vivo: (2009)</li>
+            <li>O Nosso Tempo É Hoje: (2013)</li>
+            <li>Acústico: (2015)</li>
+            <li>1977: (2016)</li>
+            <li>Live Movel: (2018)</li>
+            <li>Viva: (2019)</li>
+            <li>Luan City: (2022)</li>
+            <li>Luan City 2.0: (2023)</li>
+            <li>Luan Ao Vivo Na Lua - Crescente: (2024)</li>
+         </p>
+          <p>
+            <h1>Alguns singles notáveis:</h1>
+            <li>Tudo Que Você Quiser: (2013)</li>
+            <li>Donzela: (2013)</li>
+            <li>Cê Topa: (2014)</li>
+            <li>Tanto Faz: (2014)</li>
+            <li>Te Esperando: (2013)</li>
+            <li>Acordando o Prédio: (2016)</li>
+            <li>Eu, Você, O Mar e Ela: (2016)</li>
+            <li>Vingança (feat. Mc Kekel): (2018)</li>
+            <li>Morena: (2021)</li>
+            <li>Coração Cigano (Ao Vivo): (2022)</li>
+            <li>Clone (Ao Vivo): (2022)</li>
+          </p>
+
+
+
 </body>
 </html>
