Criamos as tabela

--- a/tabela.html
+++ b/tabela.html
@@ -8,6 +8,86 @@
 </head>
 <body>
     <h1>Página de Tabela</h1>
-    
+    <table border="2">
+       <thead>
+           <tr>
+               <th>Nome</th>
+               <th>Altura</th>
+               <th>Peso</th>
+               <th></th>
+           </tr>
+       </thead>
+         <tbody>
+           <tr>
+               <td>Vitória</td>
+               <td>1.65</td>
+               <td>47kg</td>
+               <td></td>
+           </tr>
+           <tr>
+            <td>João</td>
+            <td>1.78</td>
+            <td>80kg</td>
+            <td>
+                <button>Excluir Pessoa</button>
+            </td>
+          </tr>
+             <tr>
+             <td>Emily</td>
+             <td>1.55</td>
+             <td>60kg</td>
+             </tr>
+             <tr>
+                 <td colspan="4">Célula Mesclada</td>
+             </tr>
+             <tr>
+                 <td rowspan="3">Aqui as linhas são mescladas com os nomes</td>
+                 <td>1.85</td>
+                 <td>85kg</td>
+                 <td>
+                     <button>Desmesclar</button>
+                 </td>
+             </tr>
+             <tr>
+                <td>1.75</td>
+                <td>70kg</td>
+                <td>
+                    <button>Desmesclar</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Laiane</td>
+                <td>1.50</td>
+                <td>47kg</td>
+            </tr>
+         </tbody>
+    </table>
+      <h1>O Mundo de Luan Santana</h1>  
+      <table border="3">
+       <thead>
+           <tr>
+                <td>Item</td>
+                <td>Detalhes</td>
+                <td>Onde Comprar</td>
+                <td></td>
+           </tr>
+       </thead>
+              <tbody>
+                  <tr></tr>
+                  <td>Camiseta</td>
+                  <td>Cor preta</td>
+                  <td>
+                      <a href="https://www.luansantana.store/moda/camiseta-preta-com-estampa-exclusiva-p-amp-b">
+                          Compre aqui
+                      </a>
+                  </td>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+              </tbody>
+      </table>
 </body>
 </html>
