--- a/tabela.html
+++ b/tabela.html
@@ -64,30 +64,54 @@
     </table>
       <h1>O Mundo de Luan Santana</h1>  
       <table border="3">
-       <thead>
-           <tr>
-                <td>Item</td>
-                <td>Detalhes</td>
-                <td>Onde Comprar</td>
-                <td></td>
-           </tr>
-       </thead>
+        <thead>
+            <tr>
+                <th>IMAGENS</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Detalhes</th>
+                <th>Onde Comprar</th>
+                <th></th>
+            </tr>
+        </thead>
               <tbody>
-                  <tr></tr>
                   <td>Camiseta</td>
                   <td>Cor preta</td>
                   <td>
-                      <a href="https://www.luansantana.store/moda/camiseta-preta-com-estampa-exclusiva-p-amp-b">
+                      <a href="https://www.luansantana.store/">
                           Compre aqui
                       </a>
                   </td>
+                  <td></td>
                   <tr>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>Perfume</td>
+                      <td>ELEMENTOS-UNISSEX 100ML</td>
+                      <td>
+                          <a heref="https://www.luansantana.store/fragrancias/elementos-unissex-100ml"> 
+                                 Compre aqui
+                          </a>
+                      </td>
                   </tr>
-              </tbody>
+                  <tr>
+                    <td>Boné</td>
+                    <td>Rosa,Branco e Preto</td>
+                    <td>
+                        <a herer="https://www.luansantana.store/moda/bone-coroa-dad-hat-pretosss">
+                            Compre aqui
+                        </a>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">Célula Mesclada</td>
+                    </tr>
+            </thead>
       </table>
+
 </body>
 </html>
