--- a/tabela.html
+++ b/tabela.html
@@ -70,7 +70,11 @@
             </tr>
         </thead>
         <tbody>
-            
+            <tr>
+            <td>Camiseta</td>
+            <img src="camiseta luan.jpg"/>
+        </tr>
+        
         </tbody>
         <thead>
             <tr>
