--- a/tabela.html
+++ b/tabela.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Tabela</title>
 </head>
+
 <body>
     <h1>Página de Tabela</h1>
     <table border="2">
-       <thead>
-           <tr>
-               <th>Nome</th>
-               <th>Altura</th>
-               <th>Peso</th>
-               <th></th>
-           </tr>
-       </thead>
-         <tbody>
-           <tr>
-               <td>Vitória</td>
-               <td>1.65</td>
-               <td>47kg</td>
-               <td></td>
-           </tr>
-           <tr>
-            <td>João</td>
-            <td>1.78</td>
-            <td>80kg</td>
-            <td>
-                <button>Excluir Pessoa</button>
-            </td>
-          </tr>
-             <tr>
-             <td>Emily</td>
-             <td>1.55</td>
-             <td>60kg</td>
-             </tr>
-             <tr>
-                 <td colspan="4">Célula Mesclada</td>
-             </tr>
-             <tr>
-                 <td rowspan="3">Aqui as linhas são mescladas com os nomes</td>
-                 <td>1.85</td>
-                 <td>85kg</td>
-                 <td>
-                     <button>Desmesclar</button>
-                 </td>
-             </tr>
-             <tr>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Altura</th>
+                <th>Peso</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Vitória</td>
+                <td>1.65</td>
+                <td>47kg</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>1.78</td>
+                <td>80kg</td>
+                <td>
+                    <button>Excluir Pessoa</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Emily</td>
+                <td>1.55</td>
+                <td>60kg</td>
+            </tr>
+            <tr>
+                <td colspan="4">Célula Mesclada</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Aqui as linhas são mescladas com os nomes</td>
+                <td>1.85</td>
+                <td>85kg</td>
+                <td>
+                    <button>Desmesclar</button>
+                </td>
+            </tr>
+            <tr>
                 <td>1.75</td>
                 <td>70kg</td>
                 <td>
@@ -60,62 +62,77 @@
                 <td>1.50</td>
                 <td>47kg</td>
             </tr>
-         </tbody>
-    </table>
-      <h1>O Mundo de Luan Santana</h1>  
-      <table border="3">
-        <thead>
-            <tr>
-                <th>IMAGENS</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-            <td>Camiseta</td>
-            <img src="camiseta luan.jpg"/>
-        </tr>
-        
         </tbody>
+    </table>
+
+
+
+
+    <h1>O Mundo de Luan Santana</h1>
+    <table border="3">
         <thead>
             <tr>
                 <th>Item</th>
                 <th>Detalhes</th>
                 <th>Onde Comprar</th>
-                <th></th>
+                <th>IMAGENS</th>
             </tr>
         </thead>
-              <tbody>
-                  <td>Camiseta</td>
-                  <td>Cor preta</td>
-                  <td>
-                      <a href="https://www.luansantana.store/">
-                          Compre aqui
-                      </a>
-                  </td>
-                  <td></td>
-                  <tr>
-                      <td>Perfume</td>
-                      <td>ELEMENTOS-UNISSEX 100ML</td>
-                      <td>
-                          <a heref="https://www.luansantana.store/fragrancias/elementos-unissex-100ml"> 
-                                 Compre aqui
-                          </a>
-                      </td>
-                  </tr>
-                  <tr>
-                    <td>Boné</td>
-                    <td>Rosa,Branco e Preto</td>
-                    <td>
-                        <a herer="https://www.luansantana.store/moda/bone-coroa-dad-hat-pretosss">
-                            Compre aqui
-                        </a>
-                    </td>
-                    </tr>
-                    <tr>
-                        <td colspan="4">Célula Mesclada</td>
-                    </tr>
-            </thead>
-      </table>
+        <tbody>
+            <tr>
+                <td>Camiseta</td>
+                <td>Cor preta</td>
+                <td>
+                    <a href="https://www.luansantana.store/">
+                        Compre aqui
+                    </a>
+                </td>
+                <td>
+                    <img src="imagens/camisaa" width="200" height="150">
+                </td>
+
+            </tr>
+
+            <tr>
+                <td>Perfume</td>
+                <td>ELEMENTOS-UNISSEX 100ML</td>
+                <td>
+                    <a href="https://www.luansantana.store/fragrancias/elementos-unissex-100ml">
+                        Compre aqui
+                    </a>
+                </td>
+                <td>
+                    <img src="imagens/perfumee" width="200" height="150">
+                </td>
+            </tr>
+            <tr>
+                <td>Boné</td>
+                <td>Rosa,Branco e Preto</td>
+                <td>
+                    <a href="https://www.luansantana.store/moda/bone-coroa-dad-hat-pretosss">
+                        Compre aqui
+                    </a>
+                </td>
+                <td>
+                    <img src="imagens/bone" width="200" height="150">
+                </td>
+            </tr>
+            <tr>
+                <td>Copo Térmico 1,2L</td>
+                <td>Cores Variáveis</td>
+                <td>
+                    <a href="https://shopee.com.br/product/216824878/18199603753?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMTl2L1UxSU9xV244VWYzaDY2b1MvSVkvT3lpZHpIRVRaUjNSdjFTVjkreTY4RC9ZTkF6V3UyeFh0QVdHanFGMFpzYnc5alQzVlBYT2N5QUNOVlFYeUxVYW85SitYblNxMFdhQzlqZ2JKczl3PT0&gad_source=1&gad_campaignid=20828771740&gbraid=0AAAAACoEtRnPgVz-DqSyP7bTOCZ3NKl2P&gclid=Cj0KCQjw_L_FBhDmARIsAItqgt7ZWIOr-yiyJaUtVEO0gNXjaLciRXY5aF2VpdBI7L1VNOrz4OFNRT0aAtxaEALw_wcB">
+                        Compre aqui
+                    </a>
+                </td>
+                <td>
+                    <img src="imagens/copoo" width="200" height="150">
+                </td>
+            </tr>
+           
+            </tbody>
+    </table>
 
 </body>
+
 </html>
