Criei um formulário

--- a/formulario.html
+++ b/formulario.html
@@ -8,6 +8,116 @@
 </head>
 <body>
     <h1>Página de Formulários</h1>
+        <label>Esse input representa um botão</label>
+        <input type="button">
+        <br/>
+        <br/>
+
+        <label>Caixa de expressão</label>
+        <input type="checkbox">
+        <br/>
+        <br/>
+
+        <label>Seleciona Cor</label>
+        <input type="color">
+        <br/>
+        <br/>
+
+        <label>Seleciona data - Abre um calendário</label>
+        <input type="date">
+        <br/>
+        <br/>
+
+        <label>Data e hora local UTC</label>
+        <input type="datetime-local">
+        <br/>
+        <br/>
+
+        <label>Email - Valida sozinho</label>
+        <input type="email">
+        <br/>
+        <br/>
+
+        <label>Upload de arquivos</label>
+        <input type="file">
+        <br/>
+        <br/>
+
+        <label>Campo invisível, passa informação de uma tela para a outra</label>
+        <input type="hidden">
+        <br/>
+        <br/>
+
+        <label>Exibir imagens</label>
+        <input type="image">
+        <br/>
+        <br/>
+
+        <label>Exibe um selecionador de mês</label>
+        <input type="month">
+        <br/>
+        <br/>
+
+        <label>Apenas números no input</label>
+        <input type="number">
+        <br/>
+        <br/>
+
+        <label>Protege o campo digitado</label>
+        <input type="password">
+        <br/>
+        <br/>
+        
+        <label>Conjunto de opções</label>
+        <input type="radio">
+        <br/>
+        <br/>
+
+        <label>Dados em um espaço</label>
+        <input type="range">
+        <br/>
+        <br/>
+
+        <label>Reseta e limpa o formulário</label>
+        <input type="reset">
+        <br/>
+        <br/>
+
+        <label>Campo para pesquisa</label>
+        <input type="search">
+        <br/>
+        <br/>
+
+        <label>Envia os dados para próxima página</label>
+        <input type="submit">
+        <br/>
+        <br/>
+
+        <label>Telefone</label>
+        <input type="tel">
+        <br/>
+        <br/>
+
+        <label>Campo padrão para qualquer texto</label>
+        <input type="text">
+        <br/>
+        <br/>
+
+        <label>Tempo Hora e Minuto</label>
+        <input type="time">
+        <br/>
+        <br/>
+
+        <label>Link de site</label>
+        <input type="url">
+        <br/>
+        <br/>
+
+        <label>Opção de semanas</label>
+        <input type="week">
+        <br/>
+        <br/>
+
     
 </body>
 </html>
