formulário de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -30,6 +30,7 @@
         <br/>
         <br/>
 
+        <h2>Crie um Login</h2>
         <label>Email - Login</label>
         <input type="email">
         <br/>
@@ -50,7 +51,16 @@
         <br/>
         <br/>
 
-        <label>Sexo</label>
+        <h3>Sexo</h3>
+        <label>Masculino</label>
+        <input type="radio">
+        <br/>
+        <br/>
+        <label>Feminino</label>
+        <input type="radio">
+        <br/>
+        <br/>
+        <label>Outro</label>
         <input type="radio">
         <br/>
         <br/>
@@ -64,7 +74,7 @@
         <input type="button">
         <br/>
         <br/>
-
+            <h4>Local</h4>
         <label>Endereço, N°</label>
         <input type="number">
         <br/>
