--- a/bingo.html
+++ b/bingo.html
@@ -11,6 +11,9 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            display: flex;
+            justify-self: center;
+            align-items: center;
         }
         table{
             background-color: #ffff00;
@@ -27,13 +30,16 @@
         td{
             border: 2px solid black;
             border-radius: 15px;
+            height: 100px;
         }
         th{
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
         .Coringa{
-            padding: 0;
-            border: none;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            
         }
     </style>
 </head>
