--- a/card.html
+++ b/card.html
@@ -9,7 +9,29 @@
 </head>
 <body>
     <div class="card">
-        
+        <div class="card-star">★★★★★★(57)</div>
+        <div class="card-image">
+            <img src="imagens/teclado mecanico.jpg" width="200"/>
+        </div>
+        <div class="card-description">
+            Teclado Mecânico Gamer Husky Anchorage Full Size 
+        </div>
+        <div class="card-desconto">
+            <div class="preço">R$263,05</div>
+            <div>Restam 8 unidades</div>
+        </div>
+        <div class="card-price">
+            <div class="desconto">R$199,90</div>
+            <div>-20%</div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX com 5% de desconto
+            R$ 210,42 em até 8x de R$ 26,30 sem juros
+            ou 1x com 5% de desconto  no cartão
+        </div>
+        <div class="card-buttom-buy">
+            <button class="botão">COMPRAR</button>
+        </div>
     </div>
 </body>
 </html>
