--- a/card.html
+++ b/card.html
@@ -25,10 +25,9 @@
             <div>-20%</div>
         </div>
         <div class="card-parcelamento">
-            À vista no PIX com 5% de desconto
-            R$ 210,42 em até 8x de R$ 26,30 sem juros
-            ou 1x com 5% de desconto  no cartão
+            À vista no PIX 
         </div>
+        <div class="parcelamento">ou até 10X de R$109,98</div>
         <div class="card-buttom-buy">
             <button class="botão">COMPRAR</button>
         </div>
