--- a/card.html
+++ b/card.html
@@ -9,28 +9,135 @@
 </head>
 <body>
     <div class="card">
-        <div class="card-star">★★★★★★(57)</div>
+        <div class="card-star">★★★★★★<span class="classificação">(57)</span></div>
         <div class="card-image">
             <img src="imagens/teclado mecanico.jpg" width="200"/>
         </div>
         <div class="card-description">
-            Teclado Mecânico Gamer Husky Anchorage Full Size 
+            Teclado Mecânico Gamer Husky Anchorage Full Size, RGB, Switch Gateron EF Red, ABNT2, Preto - HTG200PTVR
         </div>
         <div class="card-desconto">
             <div class="preço">R$263,05</div>
             <div>Restam 8 unidades</div>
         </div>
         <div class="card-price">
-            <div class="desconto">R$199,90</div>
-            <div>-20%</div>
+            <div>R$199,90</div>
+            <div><span class="price">-20%</span></div>
         </div>
         <div class="card-parcelamento">
             À vista no PIX 
+        </br>ou até <span class="desconto-negrito">8X de R$26,30</span>
         </div>
-        <div class="parcelamento">ou até 10X de R$109,98</div>
+       <div class="espaço"></div>
         <div class="card-buttom-buy">
             <button class="botão">COMPRAR</button>
         </div>
     </div>
+
+    <div class="card">
+        <div class="card-star">★★★★★★<span class="classificação">(196)</span></div>
+        <div class="card-image">
+            <img src="imagens/fone gamer.jpg" width="200"/>
+        </div>
+        <div class="card-description">
+            Headset Gamer Fifine H9, Som Surround 7.1, USB, Console e PC, Preto - H9
+        </div>
+        <div class="card-desconto">
+            <div class="preço">R$267,03</div>
+            <div>Restam 20 unidades</div>
+        </div>
+        <div class="card-price">
+            <div>R$169,99</div>
+            <div><span class="price">-27%</span></div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX 
+        </br>ou até <span class="desconto-negrito">7X de R$27,59</span>
+        </div>
+       <div class="espaço"></div>
+        <div class="card-buttom-buy">
+            <button class="botão">COMPRAR</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-star">★★★★★★<span class="classificação">(19)</span></div>
+        <div class="card-image">
+            <img src="imagens/mouse.jpg" width="200"/>
+        </div>
+        <div class="card-description">
+            Mouse Gamer Sem Fio Logitech G Pro X Superlight 2 DEX, Lightspeed, 44.000 DPI, Design Assimétrico para Destros, Preto- 910-007356
+        </div>
+        <div class="card-desconto">
+            <div class="preço">R$1.111,10</div>
+            <div>Restam 22 unidades</div>
+        </div>
+        <div class="card-price">
+            <div>R$799,90</div>
+            <div><span class="price">-20%</span></div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX 
+        </br>ou até <span class="desconto-negrito">10X de R$88,87</span>
+        </div>
+       <div class="espaço"></div>
+        <div class="card-buttom-buy">
+            <button class="botão">COMPRAR</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-star">★★★★★★<span class="classificação">(1131)</span></div>
+        <div class="card-image">
+            <img src="imagens/controle sony.jpg" width="200"/>
+        </div>
+        <div class="card-description">
+            Controle Sony DualSense PS5, Sem Fio, Midnight Black - 3006452
+        </div>
+        <div class="card-desconto">
+            <div class="preço">R$499,00</div>
+            <div></div>
+        </div>
+        <div class="card-price">
+            <div>R$381,29</div>
+            <div><span class="price">-17%</span></div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX 
+        </br>ou até <span class="desconto-negrito">10X de R$40,98</span>
+        </div>
+       <div class="espaço"></div>
+        <div class="card-buttom-buy">
+            <button class="botão">COMPRAR</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-star">★★★★★★<span class="classificação">(7)</span></div>
+        <div class="card-image">
+            <img src="imagens/computador gamer.jpg" width="200"/>
+        </div>
+        <div class="card-description">
+            Computador Gamer Completo 2eletro RGB, Intel Core i5, 16gb Ram, SSD 512gb, Fonte 500w, Monitor 20" 75hz, Kit Gamer Completo - Pg2e-1011rg
+        </div>
+        <div class="card-desconto">
+            <div class="preço">R$1.610,00</div>
+            <div>Restam 78 unidades</div>
+        </div>
+        <div class="card-price">
+            <div>R$1.290,00</div>
+            <div><span class="price">-10%</span></div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX 
+        </br>ou até <span class="desconto-negrito">10X de R$143,33</span>
+        </div>
+       <div class="espaço"></div>
+        <div class="card-buttom-buy">
+            <button class="botão">COMPRAR</button>
+        </div>
+    </div>
+
+
 </body>
 </html>
