--- a/javascript.html
+++ b/javascript.html
@@ -51,21 +51,51 @@
     //     alert("Sou feliz")
     // }
 
-    var salário = Number (prompt("Digite seu salário:"))
-    if (salário <=500)
-    {
-        alert("Pode viajar para SP")
-    }else{
-        if (salário >= 501 && salário <= 800)
-        alert("Pode viajar pro RJ")
-    }
-        if(salário >=801 && salário <= 1000)
-        {
-            alert("Pode viajar para BH")
-        }
-        else
-        {
-            alert("Pode viajar para Bahia em diante...")
-        }
+    // var salário = Number (prompt("Digite seu salário:"))
+    // if (salário <=500)
+    // {
+    //     alert("Pode viajar para SP")
+    // }else{
+    //     if (salário >= 501 && salário <= 800)
+    //     alert("Pode viajar pro RJ")
+    // }
+    //     if(salário >=801 && salário <= 1000)
+    //     {
+    //         alert("Pode viajar para BH")
+    //     }
+    //     else
+    //     {
+    //         alert("Pode viajar para Bahia em diante...")
+    //     }
     
+    // var frutas = []
+    // frutas.push("Maça")
+    // frutas.push("Abacaxi")
+    // frutas.push("Laranja")
+    // frutas.push("Limão")
+
+    // for(var i = 0;  i < 10; i++) 
+    // {
+    //     document.write(i + " Oi, tudo bem?<br>")
+    // }
+
+    // var contagem = 0
+    // while(contagem < 10)
+    // {
+    //     contagem++
+    // }
+
+    // var tabuada = []
+    // for(var i = 0;  i < 11; i++) 
+    // {
+    //     document.write ("9 x " + i + "= "  + (i * 9) + "<br>")
+    // }
+
+    var tabuada = (Number(prompt("Escolha qual tabuada você quer:")))
+
+    for(var i = 0;  i < 11; i++) 
+    {
+        document.write (tabuada + " x " + i + "= " + (i * tabuada) + "<br>")
+    }
+
 </script>
