--- a/javascript.html
+++ b/javascript.html
@@ -91,11 +91,41 @@
     //     document.write ("9 x " + i + "= "  + (i * 9) + "<br>")
     // }
 
-    var tabuada = (Number(prompt("Escolha qual tabuada você quer:")))
+    // var tabuada = (Number(prompt("Escolha qual tabuada você quer:")))
 
-    for(var i = 0;  i < 11; i++) 
-    {
-        document.write (tabuada + " x " + i + "= " + (i * tabuada) + "<br>")
-    }
+    // for(var i = 0;  i < 11; i++) 
+    // {
+    //     document.write (tabuada + " x " + i + "= " + (i * tabuada) + "<br>")
+    // }
 
+    // var i = 0
+    // var count = 0
+    // while(i < 500 || count <30)
+    // {
+    //     count++
+    //     document.write(count+ "Rodada whilw n°" +i+"<br>")
+    //     i=i+10
+    // }
+
+    // var i = 0
+    // while(i < 20)
+    // {
+    //     i++
+    //     document.write("N°"+i+"<br>")
+    // }
+
+        // var soma = 0
+        // var count = 0
+        // while(count <50)
+        // {
+        //     count++
+        //     if (count % 2 !=0)
+        //     {
+        //         soma=soma+count
+        //         document.write("N°" + count + "<br>")
+        //     }
+        // }
+        // document.write("Total " + soma + "<br>")
+
+        
 </script>
