--- a/bingo.html
+++ b/bingo.html
@@ -94,5 +94,27 @@
             </tr>
         </tbody>
     </table>
+    <script>
+        //B 1-15
+        //I 16-30
+        //N 31-45
+        //G 46-60
+        //O 61-75
+        var b = []
+        for(var i = 16; i<16; i++)
+        {
+            n.push(i)
+        } 
+        document.write (n)
+        var i = []
+        var n = []
+        for(var i = 31; i< 46; i++)
+        {
+            n.push(i)
+        }
+        document.write(n)
+        var g = []
+        var o = []
+    </script>
 </body>
 </html>
